# genomad

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
docs/_source/: conf.py  faq.md  index.md  installation.md  marker_features.md  nn_classification.md  pipeline.md  post_classification_filtering.md  provirus_identification.md  quickstart.md  score_aggregation.md  score_calibration.md  taxonomic_assignment.md
docs/_source/_static/css/: custom.css
genomad/: __init__.py  _paths.py  aragorn.py  cli.py  database.py  lazy_genomad.py  mmseqs2.py  prodigal.py  sequence.py  taxonomy.py  utils.py
genomad/data/: provirus_tagger.crfsuite  rbs_categories.tsv  score_calibration_weights.npz  score_calibration_weights.py
genomad/modules/: aggregated_classification.py  annotate.py  download.py  find_proviruses.py  lazy_group.py  marker_classification.py  nn_classification.py  score_calibration.py  summary.py
genomad/neural_network/: __init__.py  igloo.py  model.py
