[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "genomad"
authors = [{ name = "Antonio Camargo", email = "antoniop.camargo@lbl.gov" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "keras >=3",
    "numba >=0.57",
    "numpy >=1.21",
    "pyrodigal-gv >=0.3.1",
    "python-crfsuite",
    "rich-click",
    "taxopy >=0.12.0",
    "tensorflow >=2.16",
    "xgboost >=1.6",
]
dynamic = ["version", "description"]

[project.urls]
Home = "https://portal.nersc.gov/genomad/"
Source = "https://github.com/apcamargo/genomad/"

[project.scripts]
genomad = "genomad.cli:cli"

[tool.flit.external-data]
directory = "genomad/data"
